--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
     <link id="css-preset" href="css/presets/preset1.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
     <!--[if lt IE 9]>
-    <script src="js/html5shiv.js"></script>    <script src="js/respond.min.js"></script>
-  <![endif]-->
+    <script src="js/html5shiv.js"></script>    <script src="js/respond.min.js"></script>  <![endif]-->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
       rel="stylesheet" type="text/css">
     <link rel="shortcut icon" href="images/favicon.ico">
   </head>
-  <!--/head-->
-  <body> <!--.preloader-->
+  <!--/head--> <body> <!--.preloader-->
     <div class="preloader"> <i class="fa fa-circle-o-notch fa-spin"></i></div>
     <!--/.preloader-->
     <header id="home">
@@ -29,21 +27,25 @@
         <div class="carousel-inner">
           <div class="item active" style="background-image: url(images/slider/1.jpg)">
             <div class="caption">
-              <h1 class="animated fadeInLeftBig">Trovão.Net></h1>
-              <p class="animated fadeInRightBig">Faça sua net trovejar (e fuja do combo!)</p>
-              <a data-scroll="" class="btn btn-start animated fadeInUpBig" href="#services">Veja como</a> </div>
+              <h1 class="animated fadeInLeftBig">Trovão.Net&gt;</h1>
+              <p class="animated fadeInRightBig">Faça sua net trovejar (e fuja
+                do combo!)</p>
+              <a data-scroll="" class="btn btn-start animated fadeInUpBig" href="#services">Veja
+                como</a> </div>
           </div>
           <div class="item" style="background-image: url(images/slider/2.jpg)">
             <div class="caption">
               <h1 class="animated fadeInLeftBig">Trovão.Net - Trovejando sua net</h1>
-              <p class="animated fadeInRightBig">Fuja do combo, fuja dos planos abusivos </p>
+              <p class="animated fadeInRightBig">Fuja do combo, fuja dos planos
+                abusivos. Ligue: (41) 3537-3638 e (41)9 8880-8034</p>
               <a data-scroll="" class="btn btn-start animated fadeInUpBig" href="#services">Start
                 now</a> </div>
           </div>
           <div class="item" style="background-image: url(images/slider/3.jpg)">
             <div class="caption">
               <h1 class="animated fadeInLeftBig">Trovão.Net</h1>
-              <p class="animated fadeInRightBig">Preço justo por um serviço de qualidade</p>
+              <p class="animated fadeInRightBig">Preço justo por um serviço de
+                qualidade</p>
               <a data-scroll="" class="btn btn-start animated fadeInUpBig" href="#services">Start
                 now</a> </div>
           </div>
@@ -82,7 +84,9 @@
           <div class="row">
             <div class="text-center col-sm-8 col-sm-offset-2">
               <h2>Nossos serviços</h2>
-              <p>Conexão a internet, sites, consultoria em informática, assessoria em tecnologia (computadores, redes com e sem fio, e celulares android) </p>
+              <p>Conexão a internet, sites, consultoria em informática,
+                assessoria em tecnologia (computadores, redes com e sem fio, e
+                celulares android) </p>
             </div>
           </div>
         </div>
@@ -92,21 +96,25 @@
               <div class="service-icon"> <i class="fa fa-flask"></i> </div>
               <div class="service-info">
                 <h3>Sites de Qualidade</h3>
-                <p>Imprima sua marca, disponibilize um site para seus clientes, e aumente suas vendas</p>
+                <p>Imprima sua marca, disponibilize um site para seus clientes,
+                  e aumente suas vendas</p>
               </div>
             </div>
             <div class="col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="450ms">
               <div class="service-icon"> <i class="fa fa-umbrella"></i> </div>
               <div class="service-info">
                 <h3>Soluções de E~commerce</h3>
-                <p>Quer vender pela internet ou somente anunciar seu negócio na internet? Nós temos a solução.</p>
+                <p>Quer vender pela internet ou somente anunciar seu negócio na
+                  internet? Nós temos a solução.</p>
               </div>
             </div>
             <div class="col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="550ms">
               <div class="service-icon"> <i class="fa fa-cloud"></i> </div>
               <div class="service-info">
                 <h3>A melhor assistência</h3>
-                <p>Suporte remoto para seus computadores, celulares, equipamentos de rede. Deixe suas infraestrutura de TI conosco, e se precupe somente com seu negócio.</p>
+                <p>Suporte remoto para seus computadores, celulares,
+                  equipamentos de rede. Deixe suas infraestrutura de TI conosco,
+                  e se precupe somente com seu negócio.</p>
               </div>
             </div>
             <div class="col-sm-4 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="650ms">
@@ -127,7 +135,9 @@
               <div class="service-icon"> <i class="fa fa-gift"></i> </div>
               <div class="service-info">
                 <h3>Transparência</h3>
-                <p>Na Trovão.net trabalhamos com transparência e transferência de tecnologia. Queremos que você seja autônomo, não dependendo de nós e nem de niguém.</p>
+                <p>Na Trovão.net trabalhamos com transparência e transferência
+                  de tecnologia. Queremos que você seja autônomo, não dependendo
+                  de nós e nem de niguém.</p>
               </div>
             </div>
           </div>
@@ -766,8 +776,7 @@
                   <div class="form-group"> <textarea name="message" id="message"
                       class="form-control" rows="4" placeholder="Enter your message"
                       required="required"></textarea> </div>
-                  <div class="form-group"> <button type="submit" class="btn-submit">Send
-                      Now</button> </div>
+                  <div class="form-group"> <button type="submit" class="btn-submit">Enviar</button> </div>
                 </form>
               </div>
               <div class="col-sm-6">
